Fix social icons bug on mobile

--- a/_sass/components/social-links.sass
+++ b/_sass/components/social-links.sass
@@ -15,6 +15,7 @@
 
         &:hover:before
             opacity: 1
+            display: inline-block
             transform: translate3d(0,0,0)
             white-space: nowrap
 
@@ -22,5 +23,39 @@
             opacity: 1
             transform: translate3d(0,0,0)
 
+        &:before		
+            content: attr(data-title)		
+            display: none		
+            position: absolute		
+            bottom: -34px		
+            left: -6px		
+            margin: 0 auto		
+            font-size: 13px		
+            padding: 3px 10px		
+            background: $beta		
+            color: #fff		
+            border-radius: 2px		
+            height: 22px		
+            line-height: 22px		
+            opacity: 0		
+            transition: opacity 150ms linear, transform 150ms linear, -webkit-transform 150ms linear		
+            transform: translate3d(0,-8px,0)		
+            z-index: 99		
+ 		
+        &:after		
+            content: ""
+            position: absolute		
+            top: 35px		
+            left: 13px		
+            width: 0		
+            height: 0		
+            border-left: 5px solid transparent		
+            border-right: 5px solid transparent		
+            border-bottom: 6px solid $beta		
+            opacity: 0		
+            transition: opacity 150ms linear, transform 150ms linear, -webkit-transform 150ms linear		
+            transform: translate3d(0,-8px,0)		
+            z-index: 100		
+ 
     > .icon
         transition: all ease-in-out .2s
